src/Chapter 5/test/test6.cpp
#include <iostream>
#include <cstdio>
#include <string>
#include <algorithm>

using namespace std;

int main()
{
    string a = "helloworld";
    // printf("a.begin()%d\n", a.begin());
    // cout << a.begin() << "\t" << a.end() << "\n"; // error
    cout << a << "\n";

    return 0;
}